<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity"
                android:id="@+id/loginLayout">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:password="true"
        android:hint="@string/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailEditText"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_alignEnd="@+id/emailEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailEditText"
        android:hint="@string/email_address"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:scaleType="fitXY"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textSize="17dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:scaleType="fitXY"
        android:text="@string/create_account"
        android:id="@+id/createAccountButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="15dp"
        android:textSize="17dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LoginText"
        android:text="@string/login_to_lahn"
        android:textSize="35sp"
        android:background="@android:color/transparent"


        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/lan_crest"
        android:layout_below="@+id/LoginText"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/emailEditText"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="12dp"
        android:layout_marginTop="0dp"/>
</RelativeLayout>
