<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".CreateAccountActivity"
    >

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailEditText"
        android:hint="@string/email_address"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:password="true"
        android:hint="@string/password_greater"
        android:layout_below="@+id/emailEditText"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_alignEnd="@+id/emailEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:password="true"
        android:hint="@string/confirm_password"
        android:id="@+id/confirmPasswordEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:scaleType="fitXY"
        android:text="@string/create_your_account"
        android:id="@+id/createAccountButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/confirmPasswordEditText"
        android:layout_alignStart="@+id/confirmPasswordEditText"
        android:textSize="17dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createAccountTextView"
        android:text="@string/create_an_account"
        android:textSize="35sp"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/lan_crest"
        android:layout_alignRight="@+id/createAccountTextView"
        android:layout_alignEnd="@+id/createAccountTextView"
        android:layout_alignLeft="@+id/emailEditText"
        android:layout_alignStart="@+id/emailEditText"
        android:layout_below="@+id/createAccountTextView"
        android:layout_above="@+id/emailEditText"
        android:paddingTop="16dp"
        android:paddingBottom="12dp"/>

</RelativeLayout>
